--- a/Project_2/public/css/main.css
+++ b/Project_2/public/css/main.css
@@ -12420,7 +12420,7 @@ body .fc {
 
 .fc-bgevent {
   /* default look for background events */
-  background: #8fdf82;
+  background: #024a64;
   opacity: .3;
   filter: alpha(opacity=30);
   /* for IE */
@@ -12536,6 +12536,14 @@ NOTE: use percentage font sizes or else old IE chokes
   cursor: pointer;
   text-transform: uppercase;
 }
+
+/* .fc-month-button {
+  background-color: #fff;
+}
+
+.fc-agendaWeek-button {
+  background-color: #000;
+} */
 
 /* Firefox has an annoying inner border */
 .fc button::-moz-focus-inner {
@@ -12880,8 +12888,8 @@ temporary rendered events).
   padding: 5px;
   line-height: 1.3;
   border-radius: 3px;
-  border: 1px solid #009688;
-  background-color: #009688;
+  border: 1px solid #024a64;
+  background-color: #024a64;
   font-weight: normal;
   /* undo jqui's ui-widget-header bold */
   margin-bottom: 5px;
@@ -13554,7 +13562,7 @@ be a descendant of the grid when it is being dragged.
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #009688;
+  background-color: #7e501c;
   z-index: 1030;
   padding-right: 15px;
 }
@@ -13591,7 +13599,7 @@ be a descendant of the grid when it is being dragged.
             flex: 0 0 auto;
     display: block;
     width: 230px;
-    background-color: #007d71;
+    background-color: #640802;
   }
 }
 
@@ -13788,7 +13796,7 @@ be a descendant of the grid when it is being dragged.
   width: 230px;
   overflow: auto;
   z-index: 10;
-  background-color: #222d32;
+  background-color: #024a64;
   -webkit-box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
   -webkit-transition: left 0.3s ease,
