--- a/Project_2/views/main.handlebars
+++ b/Project_2/views/main.handlebars
@@ -6,6 +6,7 @@
     <!-- Font-icon css-->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/main.css">
+     <link rel="icon" type="image/jpg" href="images/favicon.ico">
   </head>
 
   <body>
