jordan's final commit

--- a/Project_2/public/css/main.css
+++ b/Project_2/public/css/main.css
@@ -437,6 +437,11 @@ hr {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+#purpleRhino{
+  text-align: center;
+  
+}
+
 small,
 .small {
   font-size: 80%;
