--- a/Project_2/views/signup.handlebars
+++ b/Project_2/views/signup.handlebars
@@ -1,15 +1,40 @@
-<form id="signup" name="signup" method="post" action="/signup">
-    <label for="email">Email Address</label>
-    <input class="text" name="email" type="email" />
 
-    <label for="firstname">Firstname</label>
-    <input name="firstname" type="text" />
 
-    <label for="lastname">Lastname</label>
-    <input name="lastname" type="text" />
+<div class="row">
+        <div class ="col-md-3 col-lg-4"></div>
+        <div class="col-md-6 col-lg-4" id="purpleRhino">
+            <h1>CreateHub</h1>
+        </div>
+        <div class="col-md-3 col-lg-4"></div>
+</div>
 
-    <label for="password">Password</label>
-    <input name="password" type="password" />
+<p></p>
+<div class="row">
+        <div class ="col-md-3 col-lg-4"></div>
+        <div class="col-md-6 col-lg-4">
+          <div class="widget-small primary coloured-icon"><i class="icon fa fa-users fa-3x"></i>
+            <div class="info" id="purpleRhino">
+              <h4>Sign Up</h4>
+                <form id="signup" name="signup" method="post" action="/signup">
+                    <p><label for="email">Email Address</label>
+                    <input class="text" name="email" type="email" /></p>
 
-    <input class="btn" type="submit" value="Sign Up" />
-</form>
+                    {{!-- <p><label for="firstname">Firstname</label>
+                    <input name="firstname" type="text" /></p>
+
+                    <p></p><label for="lastname">Lastname</label>
+                    <input name="lastname" type="text" /></p> --}}
+
+                    <p></p><label for="username">Username</label>
+                    <input type="text" name="username">
+
+                    <p></p><label for="password">Password</label>
+                    <input name="password" type="password" /></p>
+
+                    <input class="btn" type="submit" value="Sign Up" />
+                </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-lg-4"></div>
+</div>
