--- a/Project_2/views/index.handlebars
+++ b/Project_2/views/index.handlebars
@@ -65,8 +65,8 @@
     <aside class="app-sidebar">
       <div class="app-sidebar__user"><img class="app-sidebar__user-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/48.jpg" alt="User Image">
         <div>
-          <p class="app-sidebar__user-name">Jordan</p>
-          <p class="app-sidebar__user-designation">jsenken@yahoo.com</p>
+          <p class="app-sidebar__user-name">{{ dbUser.username}}</p>
+          <p class="app-sidebar__user-designation">{{dbUser.email}}</p>
         </div>
       </div>
       <ul class="app-menu">
@@ -125,11 +125,11 @@
           <div class="tile">
             <h2>My Open Projects</h2>
 
-                  
+                  {{#each dbUser.Projects}}
 
-                  <p>'67 Mustang</p>
+                  <p>{{this.title}}</p>
 
-                  
+                  {{/each}}
       
           </div>
         </div>
@@ -137,9 +137,11 @@
           <div class="tile">
             <h3 class="tile-title">My Jobs</h3>
 
-             
+                {{#each dbUser.Jobs}}
 
-                  <p>detail painting</p>
+                  <p>{{this.title}}</p>
+
+                  {{/each}}
 
                   
 
